# link-gopher

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
link_gopher/: config.py  link_gopher.py  run.py  setup.py
link_gopher/browser/: base.py  factory.py
link_gopher/browser/firefox/: browser.py  driver.py  profile.py  setup.py
link_gopher/cli/: validations.py
link_gopher/filters/: base.py  factory.py
link_gopher/filters/basic/: basic_filter.py
link_gopher/output/: base.py  factory.py
link_gopher/output/file/: file_output.py
link_gopher/output/inmemory/: inmemory_output.py
link_gopher/scraper/: base.py
link_gopher/source/: base.py  factory.py
link_gopher/source/file/: file_source.py
link_gopher/source/inmemory/: inmemory_source.py
tests/: test_factories.py  test_filters.py
