[tool.poetry]
name = "link-gopher"
version = "0.1.0"
description = "Link Gopher"
authors = ["Denis Selimovic"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
click = "^8.0.1"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
autopep8 = "pycodestyle"
flake8 = "isort"
pre-commit = "^2.15.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
